--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,131 @@
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
+annotated-types==0.7.0
+anyio==4.6.2.post1
+APScheduler==3.11.0
+asgiref==3.8.1
+atomicwrites==1.4.1
 attrs==25.3.0
 Automat==25.4.16
+basepage==1.7.4
+beautifulsoup4==4.12.3
+blinker==1.9.0
+Brotli==1.1.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
+chromedriver-autoinstaller==0.6.4
+click==8.1.7
+colorama==0.4.6
 constantly==23.10.4
 cryptography==45.0.4
 cssselect==1.3.0
+ddt==1.7.2
+decorator==5.1.1
 defusedxml==0.7.1
+Django==5.2
+django-scheduler==0.10.1
 et_xmlfile==2.0.0
+execnet==2.0.2
+Faker==33.3.1
+fastapi==0.115.5
 filelock==3.18.0
+Flask==3.1.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.0
 hyperlink==21.0.0
+icalendar==6.1.0
 idna==3.10
 incremental==24.7.2
+iniconfig==2.0.0
 itemadapter==0.11.0
 itemloaders==1.3.2
+itsdangerous==2.2.0
+Jinja2==3.1.3
 jmespath==1.0.1
 lxml==6.0.0
+MarkupSafe==2.1.5
+more-itertools==10.2.0
+MouseInfo==0.1.3
+mysql-connector-python==9.1.0
+mysqlclient==2.2.7
+numpy==2.1.0
 openpyxl==3.1.5
+outcome==1.3.0.post0
 packaging==25.0
+page==0.2
+pandas==2.2.2
 parsel==1.10.0
+pillow==11.0.0
+plotly==5.24.1
+pluggy==1.4.0
 Protego==0.5.0
+py==1.11.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+PyAutoGUI==0.9.54
 pycparser==2.22
+pycryptodomex==3.21.0
+pydantic==2.10.2
+pydantic_core==2.27.1
 PyDispatcher==2.0.7
+pygame==2.6.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+PyMySQL==1.1.1
 pyOpenSSL==25.1.0
+pyperclip==1.8.2
+pypiwin32==223
+PyRect==0.2.0
+PyScreeze==0.1.30
+PySocks==1.7.1
+pytest==8.1.1
+pytest-html==4.1.1
+pytest-metadata==3.1.1
+pytest-ordering==0.6
+pytest-rerunfailures==14.0
+pytest-xdist==3.5.0
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+pytz==2024.1
+pywin32==308
+PyYAML==6.0.1
 queuelib==1.8.0
 requests==2.32.4
 requests-file==2.1.0
+schedule==1.2.2
 Scrapy==2.13.2
+selenium==4.15.2
+self==2020.12.3
 service-identity==24.2.0
 setuptools==80.9.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlparse==0.5.3
+starlette==0.41.3
+tenacity==9.0.0
 tldextract==5.3.0
+toml==0.10.2
+trio==0.25.0
+trio-websocket==0.11.1
 Twisted==25.5.0
 typing_extensions==4.14.0
+tzdata==2024.1
+tzlocal==5.2
 urllib3==2.5.0
+uvicorn==0.32.1
+virtualenv==16.1.0
 w3lib==2.3.1
+webdriver-helper==1.0.5.1
+Werkzeug==3.1.3
+wheel==0.43.0
+win10toast==0.9
+wsproto==1.2.0
+xlrd==2.0.1
+xlutils==2.0.0
+xlwt==1.3.0
+yt-dlp==2024.12.23
 zope.interface==7.2
